--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Gabe Harvey</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Marmelad&display=swap" rel="stylesheet"/>
   </head>
   <body>
     <div id="root"></div>
