--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg" href="/cactus-logo.svg" />
+    <link rel="icon" type="image/png" href="/orion-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gabe Harvey</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Marmelad&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Nabla&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
